--- a/index.html
+++ b/index.html
@@ -179,43 +179,37 @@
                     </div>
                     <div class="statistics">
                         <div class="stat">
-                            <div class="legend"><span class="legend-color systolic-color"></span><span>Systolic</span>
-                            </div>
-                            <p class="stat-value">160</p>
-                            <p class="stat-label"><img src="assets/ArrowUp.svg" alt="ArrowUp Icon"
-                                    class="Arrow-icon">Higher than Average</p>
+                            <div class="legend"><span class="legend-color systolic-color"></span><span>Systolic</span></div>
+                            <p class="stat-value" id="systolic"></p>
+                            <p class="stat-label"><img src="assets/ArrowUp.svg" alt="ArrowUp Icon" class="Arrow-icon">Higher than Average</p>
                         </div>
                         <div class="verfical-divider"></div>
                         <div class="stat">
                             <p class="legend"><span class="legend-color diastolic-color"></span>Diastolic</p>
-                            <p class="stat-value">78</span>
-                            <p class="stat-label"><img src="assets/ArrowDown.svg" alt="ArrowDown Icon"
-                                    class="Arrow-icon">Lower than Average</p>
+                            <p class="stat-value" id="diastolic"></p>
+                            <p class="stat-label"><img src="assets/ArrowDown.svg" alt="ArrowDown Icon" class="Arrow-icon">Lower than Average</p>
                         </div>
                     </div>
                 </div>
 
                 <div class="vitals">
-                    <div class="vital-1">
+                    <div class="vital" id="respiratory-rate-container">
                         <img src="assets/respiratory rate.svg" class="vital-icon" alt="Respiratory Icon">
                         <h4>Respiratory Rate</h4>
-                        <h1>20 bpm</h1>
+                        <h1 id="respiratory-rate">20 bpm</h1>
                         <p>Normal</p>
                     </div>
-                    <div class="vital-2">
+                    <div class="vital" id="temperature-container">
                         <img src="assets/temperature.svg" class="vital-icon" alt="Temperature Icon">
                         <h4>Temperature</h4>
-                        <h1>98.6°F</h1>
+                        <h1 id="temperature">98.6°F</h1>
                         <p>Normal</p>
                     </div>
-                    <div class="vital-3">
+                    <div class="vital" id="heart-rate-container">
                         <img src="assets/HeartBPM.svg" class="vital-icon" alt="Heart Rate Icon">
                         <h4>Heart Rate</h4>
-                        <h1>78 bpm</h1>
-                        <p>
-                            <img src="assets/ArrowDown.svg" class="vital-arrow" alt="Arrow Down">
-                            Lower than Average
-                        </p>
+                        <h1 id="heart-rate">78 bpm</h1>
+                        <p><img src="assets/ArrowDown.svg" class="vital-arrow" alt="Arrow Down">Lower than Average</p>
                     </div>
                 </div>
             </div>
